@@ -1,3 +1,8 @@
+2018-04-25  Doug Simons <doug.simons@testplant.com>
+
+       * NSRegularExpression.m: Move call to uregex_setMatchCallback after some other
+	calls so it will succeed (not sure why, but this makes it work).
+
 2017-03-28  Doug Simons <doug.simons@testplant.com>
 
        * NSFileManager.m: Add basic implementation of setAttributes:ofItemAtPath:error:.
